# maple

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: fullscreen.frag  fullscreen.vert  mesh.frag  mesh.vert  sky.frag  trace.comp
src/: asset_manager.cpp  asset_manager.h  camera.h  constants.h  core.cpp  core.h  game_state.h  main.cpp  material.h  mesh.cpp  mesh.h  model.h  platform.cpp  platform.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  types.h  utils.h  vertex.h
